# mandarin-sandhify

./: .gitignore  README.md  dune-project  mandarin_sandhify.opam  rules.md
lib/: dune  sandhi.ml  test.ml
