(lang dune 3.7)

(name mandarin_sandhify)

(generate_opam_files true)

; (source
;  (github username/reponame))

(authors "Madhav K")

(maintainers "Madhav K")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name mandarin_sandhify)
 (synopsis "Tool to translate between ")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
